--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "4.x",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
