--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "leaflet": "^1.9.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-leaflet": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.x",
