--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,21 @@
 {
-  "env": {
-    "browser": true,
-    "es6": true,
-    "jest": true
-  },
-  "parser": "@babel/eslint-parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
+  "root": true,
+  "env": { "browser": true, "es2020": true },
   "extends": [
-    "airbnb",
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:prettier/recommended"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react-hooks/recommended"
   ],
-  "plugins": ["react", "react-hooks"],
+  "ignorePatterns": ["dist", "build"],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["react-refresh"],
   "rules": {
-    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
-    "react/react-in-jsx-scope": "off",
-    "import/no-unresolved": "off",
-    "no-shadow": "off",
-    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+    "react-refresh/only-export-components": ["warn", { "allowConstantExport": true }]
   },
-  "ignorePatterns": ["dist/", "build/"]
+  "overrides": [
+    {
+      "files": ["redux/**/*Slice.js"],
+      "rules": { "no-param-reassign": ["error", { "props": false }] }
+    }
+  ]
 }
