--- a/package.json
+++ b/package.json
@@ -5,64 +5,44 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "prepare": "husky install",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "build": "tsc && vite build",
+    "eslint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "stylelint": "npx stylelint \"**/*.{css,scss}\"",
+    "eslint:fix": "pnpm eslint --fix",
+    "stylelint:fix": "pnpm stylelint --fix",
+    "lint:fix": "pnpm eslint:fix && pnpm stylelint:fix",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "@reduxjs/toolkit": "^1.9.3",
-    "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
-    "leaflet": "^1.9.3",
-    "prop-types": "^15.8.1",
+    "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.0",
-    "react-redux": "^8.0.5",
-    "redux-logger": "^3.0.6"
+    "react-leaflet": "^4.2.1",
+    "react-redux": "^8.1.2",
+    "redux-logger": "^3.0.6",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@babel/core": "7.x",
-    "@babel/eslint-parser": "7.x",
-    "@babel/plugin-syntax-jsx": "7.x",
-    "@babel/preset-react": "7.x",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "7.x",
-    "eslint-config-airbnb": "18.x",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "7.x",
+    "@types/leaflet": "^1.9.4",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@types/redux-logger": "^3.0.9",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "jsdom": "^21.1.1",
-    "lint-staged": "^13.1.2",
-    "prettier": "^2.8.4",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "stylelint": "13.x",
     "stylelint-config-standard": "21.x",
     "stylelint-csstree-validator": "1.x",
     "stylelint-scss": "3.x",
-    "vite": "^4.1.0",
-    "vitest": "^0.29.8"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write",
-    "*.css": "stylelint --fix",
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "git add ."
-    ]
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
