--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/testing-library__jest-dom": "5.x",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "leaflet": "^1.9.4",
@@ -34,7 +35,6 @@
     "@testing-library/jest-dom": "5.x",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.4",
     "@types/leaflet": "^1.9.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
